Добавил в бан ds_Store, разделил стили на блоки

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="ru-RU">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="./assets/css/general.css">
+    <link rel="stylesheet" href="./assets/css/cart.css">
+    <link rel="stylesheet" href="./assets/css/catalog.css">
+    <link rel="stylesheet" href="./assets/css/popup.css">
   </head>
 
   <body>
