--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,11 @@
     </section>
 
     <div id="popupCart" hidden></div>
-
     <div id="popupBuy" hidden></div>
-
     <div id="cover" hidden onclick="hiddenPopup()"></div>
 
     <script src="api/products.js"></script>
+    <script src="templates.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
