--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <div id="popupCart" hidden></div>
     <div id="popupBuy" hidden></div>
-    <div id="cover" hidden onclick="hiddenPopup()"></div>
+    <div id="cover" hidden></div>
 
     <script src="api/products.js"></script>
     <script src="templates.js"></script>
