--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<html lang="ru">
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <link
+    href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Sans:400,700&display=swap&subset=cyrillic"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <script src="api/products.js"></script>
-  </body>
+<body>
+  <header class="header">Список товаров</header>
+  <main class="product-listing-wrapper">
+  </main>
+
+  <script src="api/products.js"></script>
+  <script src="index.js"></script>
+</body>
+
 </html>
