--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,72 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-  </head>
+<!doctype html>
+<html lang="ru">
 
-  <body>
-    <main class="product-listing-wrapper">
-    </main>
+<head>
+    <meta charset="utf-8" />
+    <title>furniture store</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
 
-    <script src="api/products.js"></script>
-  </body>
+<body class="main">
+    <div class="main-page">
+        <header>
+            <div class="main-page__header"></div>
+        </header>
+        <div class="main-page__list">
+        </div>
+        <div class="popup">
+            <div class="popup__body">
+                <div class="popup__header">
+                    <div class="txt txt_bold popup__title"></div>
+                    <button class="close-btn close-btn_close-popup popup__close-btn"></button>
+                </div>
+                <div class="popup__main-section">
+                    <div class="popup__left-block">
+                        <img class="img popup__img" alt=" "/>
+                        <div class="txt txt_contrast popup__cost"></div>
+                    </div>
+                    <div class="popup__right-block popup__right-block_border">
+                        <div class="txt txt_al-r">Комментарий<br /> к заказу:</div>
+                        <textarea type="text" class="txt-input txt-input_comment popup__txt-input"></textarea>
+                    </div>
+                </div>
+                <div class="popup__input-section">
+                    <div class="popup__left-block">
+                        <div class="txt">Ваш телефон *:</div>
+                    </div>
+
+                    <div class="popup__right-block popup__right-block_vertical">
+                        <input type="tel" class="txt-input">
+                        <button class="btn btn_contrast">Отправить</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cart">
+            <div class="cart__header">
+                <div class="header_arrow txt txt_white">Вы добавили в корзину:</div>
+            </div>
+            <div class="cart__main-section">
+                <img class="img cart__img" src="#">
+                <div class="cart__info">
+                    <div class="cart__title txt"></div>
+                    <div class="cart__cost txt txt_grey mg_t"></div>
+                </div>
+                <button class="close-btn close-btn_contrast close-btn_close-cart"></button>
+            </div>
+            <div class="cart__footer">
+                <button class="btn btn_contrast">Перейти в корзину:</button>
+            </div>
+        </div>
+    </div>
+    <script src="/common.blocks/source/js/cache.js"></script>
+    <script src="/api/products.js"></script>
+    <script src="/common.blocks/source/js/numberWithSpaces.js"></script>
+    <script src="/App.js"></script>
+    <script src="/common.blocks/btn/_order/btn_order.js"></script>
+    <script src="/common.blocks/btn/_add-to-cart/btn_add-to-cart.js"></script>
+    <script src="/common.blocks/close-btn/_close-popup/close-btn_close-popup.js"></script>
+    <script src="/common.blocks/close-btn/_close-cart/close-btn_close-cart.js"></script>
+</body>
+
 </html>
