fix(basketButton): replace png icon to svg

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,7 @@
   <body>
     <nav class="navbar">
       <div class="tooltip">
-        <button>
-          <img src="assets/icons/basket.png" width="24px" height="24px">
-        </button>
+        <button class="basket-button"></button>
         <div class="tooltip-content">
           <span class="content-title">Вы добавили в корзину:</span>
           <div class="content-elements"></div>
