optimize js + dependences

--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,7 @@
 
 <body class="main">
     <div class="main-page">
-        <header>
-            <div class="main-page__header"></div>
-        </header>
-        <div class="main-page__list">
-        </div>
+        <header class="main-page__header"></header>
         <div class="popup">
             <div class="popup__body">
                 <div class="popup__header">
@@ -59,14 +55,14 @@
             </div>
         </div>
     </div>
-    <script src="/common.blocks/source/js/cache.js"></script>
-    <script src="/api/products.js"></script>
-    <script src="/common.blocks/source/js/numberWithSpaces.js"></script>
-    <script src="/App.js"></script>
-    <script src="/common.blocks/btn/_order/btn_order.js"></script>
-    <script src="/common.blocks/btn/_add-to-cart/btn_add-to-cart.js"></script>
-    <script src="/common.blocks/close-btn/_close-popup/close-btn_close-popup.js"></script>
-    <script src="/common.blocks/close-btn/_close-cart/close-btn_close-cart.js"></script>
+    <script src="common.blocks/source/js/cache.js"></script>
+    <script src="api/products.js"></script>
+    <script src="common.blocks/source/js/numberWithSpaces.js"></script>
+    <script src="App.js"></script>
+    <script async src="common.blocks/btn/_order/btn_order.js"></script>
+    <script async src="common.blocks/btn/_add-to-cart/btn_add-to-cart.js"></script>
+    <script async src="common.blocks/close-btn/_close-popup/close-btn_close-popup.js"></script>
+    <script async src="common.blocks/close-btn/_close-cart/close-btn_close-cart.js"></script>
 </body>
 
 </html>
