fix buttons functions

--- a/src/index.html
+++ b/src/index.html
@@ -59,8 +59,7 @@
     <script src="api/products.js"></script>
     <script src="common.blocks/source/js/numberWithSpaces.js"></script>
     <script src="App.js"></script>
-    <script async src="common.blocks/btn/_order/btn_order.js"></script>
-    <script async src="common.blocks/btn/_add-to-cart/btn_add-to-cart.js"></script>
+    <script async src="common.blocks/list-item/list.js"></script>
     <script async src="common.blocks/close-btn/_close-popup/close-btn_close-popup.js"></script>
     <script async src="common.blocks/close-btn/_close-cart/close-btn_close-cart.js"></script>
 </body>
