--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,7 @@
     <main class="product-listing-wrapper">
       <section class="product-listing-wrapper__catalog catalog">
         <ul class="catalog__list">
-          <li class="catalog__item">
-            <img class="catalog__img" src="assets/images/3.jpg">
-            <div class="catalog__caption">
-              <h3 class="catalog__heading">
-                Гостиная классика Panamar Classic
-              </h3>
-              <div class="catalog__price">267593</div>
-            </div>
-            <div class="catalog__btns">
-              <a href="#" class="catalog__btn btn">Заказать</a>
-              <a href="#" class="catalog__btn btn--grey">В корзину</a>
-            </div>
-          </li>
+          
         </ul>
       </section>
     </main>
@@ -60,7 +48,7 @@
                 Гостиная классика Panamar Classic
             </h3>
             <div class="modal-cart__price">267593</div>
-            <button class="modal-cart__btn btn">X</button>
+            <button class="modal-cart__delete-btn">X</button>
           </div>
         </li>
       </ul>
@@ -68,5 +56,6 @@
     </section>
 
     <script src="api/products.js"></script>
+    <script src="renderStoreItems.js"></script>
   </body>
 </html>
