--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
             </div>
             <div class="popup_input-number-submit">
                 <input type="tel">
-                <div class="button-submit">
+                <button class="button-submit">
                   <p>Отправить</p>
-                </div>
+                </button>
             </div>
         </div>
         <div class="close-popup"></div>
@@ -46,20 +46,20 @@
         <p>Вы добавили в корзину:</p>
       </div>
       <div class="small-popup_content">
-        <img id="small-popup-image" src="./assets/images/1.jpg">
+        <img id="small-popup-image" src="">
         <div class="text">
-            <p id="small-popup-title">Выкатной детский диван Зайка производитель фабрика Blanes</p>
-            <p id="small-popup-price">15800 руб.</p>
+            <p id="small-popup-title"></p>
+            <p id="small-popup-price"></p>
         </div>
       </div>
       <div class="small-popup_buttons">
-        <div class="small-popup_buttons-follow">
+        <button class="small-popup_buttons-follow">
           <p>Перейти в корзину</p>
-        </div>
+        </button>
       </div>
     </div>
 
     <script src="api/products.js"></script>
-    <script src="./popup.js"></script>
+    
   </body>
 </html>
