--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 
   <body>
     <main class="product-listing-wrapper">
+      <p class="test"></p>
     </main>
 
     <script src="api/products.js"></script>
